# jumper

./: .gitignore  Cargo.toml  IMPROVEMENT.md  README.md  build.sh  install.sh  jumper.sh  package.sh
.github/workflows/: ci.yml
.homebrew/: jumper.rb
Formula/: jumper.rb
docs/: README.md  configuration.md  installation.md  troubleshooting.md  usage.md
scripts/: install.sh  uninstall.sh
src/: config.rs  jumper.rs  lib.rs  main.rs  search.rs  store.rs
tests/: main.rs  store_config_tests.rs  unit_tests.rs
