[package]
name = "jumper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
thiserror = "1"
clap = { version = "4.4", features = ["derive"] }
log = "0.4"
env_logger = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
walkdir = "2"
directories = "5"
fs2 = "0.4"
toml = "0.7.8"
indexmap = "=2.2.6"

[dev-dependencies]
tempfile = "3"
