[package]
name = "jumper"
version = "0.1.1"
edition = "2021"
description = "A CLI tool for quickly navigating between directories by name"
license = "MIT"
repository = "https://github.com/yixun/jumper"
keywords = ["cli", "directory", "navigation", "productivity"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
thiserror = "1"
clap = { version = "4.4", features = ["derive"] }
clap_complete = "4.4"
log = "0.4"
env_logger = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
walkdir = "2"
directories = "5"
fs2 = "0.4"
toml = "0.7.8"
indexmap = "=2.2.6"

[dev-dependencies]
tempfile = "3"
